Fail context creation if port for HTTP is bound

https://bugzilla.gnome.org/show_bug.cgi?id=654442